Hiding the overflow on the Utilization card and content resolved the issue with the appearing scroll bar.

--- a/frontend/packages/console-shared/src/components/dashboard/utilization-card/utilization-card.scss
+++ b/frontend/packages/console-shared/src/components/dashboard/utilization-card/utilization-card.scss
@@ -1,5 +1,6 @@
 .co-utilization-card__body {
   padding: 0;
+  overflow: hidden;
 }
 
 .co-utilization-card__item .co-u-hidden {
@@ -41,6 +42,7 @@
 
 .co-utilization-card__item-section {
   width: 100%;
+  overflow: hidden;
 }
 
 .co-utilization-card__item-section-multiline {
